pipelines/Kubernetes/Istio/Istio/UAT/Istio-Ingress/coc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: coc-client-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - name: "coc-client-gateway-v1"
    match:
    - uri:
        prefix: "/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: coc-client-gateway.deploy-uat-istio.svc.cluster.local
        port:
          number: 15341
