pipelines/Kubernetes/Istio/Istio/UAT/Istio-Ingress/pv-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payvantage-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - name: "payvantage-gateway-v1"
    match:
    - uri:
        prefix: "/pv"
    rewrite:
      uri: "/pv"
    route:
    - destination:
        host: payvantage.deploy-uat-istio.svc.cluster.local
        port:
          number: 5001
